# drex

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README  README.md  clean.sh  compile.sh  usage.md
application/: README.md
application/cpu/high_priority/: run_high.sh
application/cpu/high_priority/output/: app  terminal_output.txt
application/cpu/low_priority/: app.cc  run_low.sh
application/cpu/low_priority/output/: app  terminal_output.txt
application/dpu/high_priority/: dpa_common.h  run_demo_xsched_preload.sh  run_high.sh  run_with_xsched.sh
application/dpu/high_priority/dpa_kernel_launch/host/: dpa_kernel_launch_sample.c
application/dpu/low_priority/: build_dpacc_samples.sh  dpa_common.c  run_demo.sh  run_demo_xsched_preload.sh  run_low.sh  run_with_xsched.sh
application/dpu/low_priority/dpa_kernel_launch/: build_output.sh  meson.build
application/dpu/low_priority/dpa_kernel_launch/device/: dpa_kernel_launch_kernels_dev.c
application/dpu/low_priority/dpa_kernel_launch/host/: dpa_kernel_launch_sample.c
application/dpu/low_priority/output/: terminal_output.txt
application/dpu_ts/: Makefile  README.md  run.sh
application/dpu_ts/dpa_kernel_launch/: dpa_kernel_launch_main.c  meson.build
application/dpu_ts/dpa_kernel_launch/device/: dpa_kernel_launch_kernels_dev.c
application/dpu_ts/dpa_kernel_launch/host/: dpa_kernel_launch_sample.c
application/dpu_ts/results/: bg-token.result.txt  bg.result.txt  fg-token.result.txt  fg.result.txt
application/dpu_ts/scripts/: build.sh  run_base.sh
application/dpu_up/: CMakeLists.txt  Makefile  README.md  run.sh
application/dpu_up/device/: dpu_up_kernels_dev.c
application/dpu_up/include/: runtime.h  utils.h
application/dpu_up/main/: up_bg.cpp  up_bg_demo.cpp  up_bg_race.cpp  up_fg.cpp  up_fg_demo.cpp  up_fg_race.cpp
application/dpu_up/results/: up_bg.demo.txt  up_bg.race.txt  up_bg.stable.txt  up_fg.demo.txt
application/dpu_up/scripts/: build.sh  check_up_summary.sh  run_base.sh
application/dpu_up/src/: runtime.cpp
application/gpu/high_priority/: run_high.sh
application/gpu/high_priority/output/: app.cubin
application/gpu/low_priority/: run_low.sh
application/gpu/low_priority/output/: app.cubin
application/gpu_dynamic_up/: CMakeLists.txt  run.sh
application/gpu_dynamic_up/include/: utils.h
application/gpu_dynamic_up/main/: up_loop.cpp
application/gpu_dynamic_up/results/: up_loop_bg.csv  up_loop_fg.csv
application/gpu_dynamic_up/scripts/: build.sh
application/gpu_dynamic_up/trt/src/: model.cpp
application/gpu_token_up/: CMakeLists.txt  Makefile  run.sh
application/gpu_token_up/main/: up_loop.cpp
application/gpu_token_up/trt/include/: cuda_assert.h
application/gpu_token_up/trt/src/: model.cpp
application/gpu_transparent_cuda/: .gitignore  Makefile  run.sh  transparent_cuda_loop.cu
application/gpu_transparent_up/: .gitignore  CMakeLists.txt  run.sh
application/gpu_transparent_up/include/: utils.h
application/gpu_transparent_up/main/: up_loop.cpp
application/gpu_transparent_up/trt/cmake/: FindTensorRT.cmake
application/gpu_transparent_up/trt/include/: tensor.h
application/gpu_transparent_up/trt/src/: model.cpp
application/gpu_up/: .gitignore  CMakeLists.txt  README.md  run.sh
application/gpu_up/main/: up_bg.cpp  up_fg.cpp
application/gpu_up/scripts/: run_base.sh
application/gpu_up/trt/: CMakeLists.txt
application/gpu_up/trt/include/: model.h
application/gpu_up/trt/src/: model.cpp  tensor.cpp
client/: CMakeLists.txt  client.cc  client_api.cc  client_api.h  client_logging.cc  client_logging.h  integrated_client.cc  intergrated_client.cc  resource_client.cc
cmake/: Dependencies.cmake
docs/: usage.md
proto/: CMakeLists.txt  remote_service.proto  resource_control.proto
scripts/: build_deps.sh
server/: CMakeLists.txt  asic_task.cc  asic_task.h  cpu_task.cc  cpu_task.h  dpu_task.cc  dpu_task.h  fpga_task.cc  fpga_task.h  gpu_task.cc  gpu_task.h  npu_task.cc  npu_task.h  remote_service_implement.cc  remote_service_implement.h  server.cc  server_logging.cc  server_logging.h  task_executor.cc  task_executor.h  task_factory.h  task_runtime_control.cc  task_runtime_control.h
